--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
-.menu {
-  color: red;
-  text-decoration: none;
-  margin: 30px;
-}
-
+/* MENU BAR */
 a:visited {
   color: green;
 }
 
 a:hover {
   color: orange;
+}
+
+a, .menu {
+  color: red;
+  text-decoration: none;
+  margin: 30px;
+  text-align: center;
+  font-size: 23px;
 }
